syntax = "proto3";
package trello.user_service;

import "user.proto";
import "activity.proto";
import "google/protobuf/empty.proto";

message CreateUserSchema {
    string email=1;
    string username=2;
    string bio=3;
    string avatar=4;
}

message FullUserInfoResponse {
    trello.user.UserSchema data=1;
}

message FullAllUserInfoResponse {
    repeated trello.user.UserSchema data=1;
}

message UpdateUserSchema {
    string _id=1;
    string email=2;
    string username=3;
    string bio=4;
    string avatar=5;
    repeated trello.activity.ActivitySchema activities=6;
    repeated string workspace_id=7;
}

service UserService {
    rpc CreateUser(CreateUserSchema) returns (FullUserInfoResponse);
    rpc GetAll(google.protobuf.Empty) returns (FullAllUserInfoResponse);
    rpc UpdateUser(UpdateUserSchema) returns (FullUserInfoResponse);
}
